[gd_scene load_steps=2 format=3 uid="uid://cilipuvit0x3l"]

[ext_resource type="Script" path="res://feed_component.gd" id="1_8sp7t"]

[node name="FeedComponent" type="Area2D"]
collision_mask = 36
script = ExtResource("1_8sp7t")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
